--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,10 +1,16 @@
-.nav {
+.ul {
   display: flex;
-  gap: 10px;
-  align-items: center;
-  justify-content: start;
-  padding: 10px;
-  border-bottom: 1px solid #000;
-  box-shadow: 0 3px 0 rgb(209, 207, 207);
-  margin-bottom: 10px;
+  gap: 12px;
+  list-style: none;
+  padding: 20px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.link {
+  text-decoration: none;
+  font-size: 24px;
+}
+
+.active {
+  color: red;
 }
